--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "cantrellnm <cantrellnm@gmail.com>",
   "dependencies": {
     "express": "^4.14.0",
+    "mongoose": "^4.5.3",
     "pug": "^2.0.0-beta3"
   }
 }
