--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "express": "^4.14.0",
     "gulp": "^4.0.2",
     "gulp-mongodb-data": "^3.0.1",
-    "mongoose": "^4.5.3",
-    "pug": "^2.0.0-beta3"
+    "mongoose": "^5.9.0",
+    "pug": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
