--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": "^12.0"
+  },
   "dependencies": {
     "express": "^4.14.0",
     "gulp": "^4.0.2",
