--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "^12.0"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "express": "^4.14.0",
     "gulp": "^4.0.2",
     "gulp-mongodb-data": "^3.0.1",
